Removed instances of Glue from backend.
